ui/apps/io.ox/mail/style.less
/* ... */
.rightside.classic-toolbar-visible .thread-view-control { top: @toolbar-height; }

.list-view-control .toolbar {
    .user-select(none);
    .select-all {
        color: #555;
        cursor: pointer;
        i {
            color: #ccc;
            margin-right: 14px;
            width: 16px;
            font-size: 18px;
            position: relative;
            top: 2px;
        }
    }
    .dropdown-menu {
        font-size: 14px;
    }
}

.preview-right {
    .leftside {
        width: 320px;
    }
    .rightside {
        left: 320px;
    }
}

@media(max-width: 700px) {
    .preview-right {
        .leftside {
            width: 280px;
        }
        .rightside {
            left: 280px;
        }
    }
}

.preview-bottom {
    .leftside { left: 0; right: 0; bottom: auto; width: auto !important; height: 45%; border-bottom: 1px solid #ccc;  z-index: 2; overflow: visible; }
    .rightside { left: 0 !important; right: 0; top: 45%; z-index: 1; }
    // horizontal resizebar
    .list-view-control .resizebar {
        display: none;
        &.vertical {
            background: transparent;
            width: 100%;
            height: 5px;
            position: absolute;
            z-index: 10000;
            cursor: s-resize;
            cursor: ns-resize;
            cursor: row-resize;
            right: auto;
            top: auto;
            bottom: 0;
            display: block;
        }
    }
}

.preview-none {
    .leftside { top: 0; left: 0; right: 0; bottom: 0; width: auto !important; z-index: 1; }
    .rightside { top: 0; right: 0; bottom: 0; left: 0 !important; width: auto; display: none; z-index: 2; }
    .rightside.preview-visible { display: block; }
}

.list-item {
    border-bottom: 1px solid rgba(0, 0, 0, 0.15);
}

.list-item.small {
    padding-top: 7px;
    padding-bottom: 7px;
}

.list-item.small .list-item-checkmark .fa.fa-checkmark {
    top: 8px;
}

.list-item.small .list-item-content,
.thread-view .list-item.small {
    display: table;
    width: 100%;
    table-layout: fixed;
}

.list-item-column {
    display: table-cell;
    vertical-align: middle;
    padding: 0;
    @icon-width: 24px;
    &.column-1 { width: @icon-width; text-align: center; }
    &.column-2 { width: @icon-width; text-align: center; }
    &.column-3 { width: @icon-width; text-align: center; }
    &.column-4 { width: 35%; padding-right: 10px; }
    &.column-5 { width: 55%; padding-right: 10px; }
    &.column-6 { width: 140px; text-align: right; }
}

.list-view .list-item {

    &.small {

        .priority { float: none; }
        .from span.person { .fontWeight(normal); }

        .drag-title {
            opacity: 1;
        }

        .date {
            display: block;
            float: none;
            .ellipsis();
        }

        &.unread {
            .from span.person, .subject, .date { .fontWeight(bold); }
        }

        .date {
            display: block;
            float: none;
            .ellipsis();
        }
    }

    &.unread {
        .date { opacity: 1; .fontWeight(bold); }
        .subject {
            html.high-contrast & {
                color: @hc-link-color;
            }
        }
    }

    @media (max-width: 480px), (max-device-width: 480px)  {
        &.unread.selected {
            .subject { color: #000; }
        }
        &.complete > .list-item:last-child {
            margin-bottom: @toolbar-height;
            border-bottom: 0;
        }
        font-size: @phone-font-size;
        line-height: @phone-line-height;

    }
}

.list-view {
    @media (max-width: 480px), (max-device-width: 480px)  {
        .list-item:hover {
            background-color: rgba(221, 221, 221, 0.5);
        }
        &.complete > .list-item:last-child {
            margin-bottom: @toolbar-height;
            border-bottom: 0;
        }
    }
}

.preview-bottom .mail-detail-pane .mail-detail-decorator { padding: 0; }
.preview-bottom .inplace-reply { margin: 14px; }

.list-view.thread-view .list-item.small { padding: 7px 14px 7px 48px; }

.io-ox-mail-window .foldertree-sidepanel { left: 0; }

.simple-mail-writer {
    z-index: 10;
    background-color: white;
    @header-height: 190px;
    @padding: 7px;
    .header {
        background-color: #eee;
        position: absolute;
        top: 40px + @padding;
        right: @padding;
        left: @padding;
        height: @header-height;
        td {
            height: 45px;
            padding: 0 14px 0 0;
            vertical-align: middle;
        }
        td.row-label {
            width: 100px;
            text-align: right;
        }
        input {
            height: 30px;
            margin: 0px;
        }
    }
    .editor {
        color: #aaa;
        background-color: white;
        position: absolute;
        top: @header-height + 40px;
        right: @padding;
        bottom: @padding;
        left: @padding;
        textarea {
            height: 100%;
            width: 100%;
            padding: 14px;
            overflow: auto;
            outline: 0;
            border: 0px none;
        }
    }
}

.mail-detail {
    section.body {
        margin: 0;
        padding: 20px;
        background-color: #fff;
        display: none;
        width: 100%;
        cursor: default;
        outline: 0;
        &.loading {
            min-height: 80px;
        }
    }
    section.attachments {
        display: none;
    }
    section.notifications {
        display: none;
    }

    &.expanded {
        section.attachments, section.notifications { display: block; }
        section.body { display: table; /* for proper overflow behavior */ }
        section.attachments:empty { display: none; }
    }

    &.no-padding {
        h1.subject,
        section.body,
        section.notifications,
        section.attachments { padding-left: 0; padding-right: 0; }
    }
}
/* ... */

