Fixed: Line-wrap in "Select all" on ios 8

--- a/ui/apps/io.ox/mail/style.less
+++ b/ui/apps/io.ox/mail/style.less
@@ -37,6 +37,7 @@
     .select-all {
         color: #555;
         cursor: pointer;
+        white-space: nowrap;
         i {
             color: #ccc;
             margin-right: 14px;
